--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
 .calculator{
     background-color: rgb(180, 180, 180);
 
-    height: 80%;
+    min-height: 80%;
     width: 370px;
 
     border: 2px solid;
@@ -49,7 +49,9 @@ body{
     margin-bottom: 20px;
 
     display: flex;
-    justify-content: end;
+    flex-direction: column;
+    align-items: flex-end;
+    
 }
 
 .buttons{
@@ -87,4 +89,17 @@ button:hover{
     border: none;
     background-color: transparent;
     margin-left: 4px;
+}
+
+.display1{
+    height: 50px;
+    font-size: 25px;
+    max-width: 100%;
+
+}
+.display2{
+    height: 50px;
+    max-width: 100%;
+    font-size: 45px;
+    
 }
