--- a/style.css
+++ b/style.css
@@ -19,11 +19,12 @@ body{
     justify-content: center;
     align-items: center;
 
-    background-color: rgb(46, 46, 46);
+    background-color: rgb(209, 193, 164);
 }
 
 .calculator{
-    background-color: rgb(180, 180, 180);
+    background-color: #111111;
+    
 
     min-height: 80%;
     width: 370px;
@@ -38,11 +39,11 @@ body{
 }
 
 .display{
-    background-color: rgb(243, 243, 243);
-
+    background-color: #BDF0A6;
+    color: white;
     height: 100px;
 
-    border: 2px solid;
+    /* border: 2px solid; */
     border-radius: 10px;
 
     padding: 20px;
@@ -51,6 +52,8 @@ body{
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+
+    color: black;
     
 }
 
@@ -74,15 +77,15 @@ body{
 
 button{
     flex: 1;
-    background-color: rgb(224, 224, 224);
-    border: 2px solid rgb(255, 255, 255);
+    background-color: #333333;
+    /* border: 2px solid rgb(255, 255, 255); */
     border-radius: 10px;
 
-    font-size: 20px;
-    color: rgb(49, 49, 49);
+    font-size: 25px;
+    color: rgb(255, 255, 255);
 }
 button:hover{
-    background-color: rgb(255, 255, 255);
+    background-color: #444444;
 }
 
 .a{
@@ -102,4 +105,25 @@ button:hover{
     max-width: 100%;
     font-size: 45px;
     
+}
+
+.operation{
+    background-color: #ED802E;
+}
+.operation:hover{
+    background-color: #ff6f00;
+}
+
+#equal{
+    background-color: #ED802E;
+}
+#equal:hover{
+    background-color: #ff6f00;
+}
+
+#clear,#delete{
+    background-color: rgb(78, 78, 78);
+}
+#clear:hover,#delete:hover{
+    background-color: rgb(102, 102, 102);
 }
